--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".DailyActivity"></activity>
+        <activity android:name=".DetailActivity" />
         <activity android:name=".InputActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
